--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5109",
+      "applicationUrl": "http://localhost:5109;https://localhost:7291",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
