--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PersonalExpensesDB;Trusted_Connection=True;MultipleActiveResultSets=true,Encrypt=False"
+  },
   "AllowedHosts": "*"
 }
